--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
         menu:
           - text: "Power Analysis for LMMs"
             href: posts/power-analysis-lmm/index.qmd
-          - text: "FWER Correction, background"
+          - text: "FWER Correction, background 1"
             href: posts/fwer-correction-part1/index.qmd
           - text: "FWER Correction, background pt. 2"
             href: posts/fwer-correction-part2/index.qmd
