--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,10 @@ website:
           href: mailto:martinsjogard@gmail.com
         - icon: mortarboard-fill
           href: https://scholar.google.com/citations?user=F59U3gEAAAAJ&hl=en
+  sidebar:
+    tools:
+      - icon: github
+        href: https://github.com/martinsjogard
 
 format:
   html:
