--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,3 +30,8 @@ format:
     theme: cosmo
     toc: true
     css: custom.css
+    grid:
+      sidebar-width: 300px
+      body-width: 900px
+      margin-width: 300px
+      gutter-width: 1.5rem
